@@ -247,13 +247,12 @@ Frequenty Asked Questions:
 15. What about Dropline support?
 
  There is no exception for dropline packages.  If you do not want them
- upgraded, either put the package names into the exception list or use 
- interactive mode (do not use --no-prompt, use --interactive).
+ upgraded, either put the package names or regex into the exception list or
+ use interactive mode (do not use --no-prompt, use --interactive).
 
- You can also create an exlude list for the dropline pacakges like so:
-
-  slapt-get --installed|awk '{print $1}'|grep 'dl$'| \
-    xargs -r echo|sed -e 's/ /,/'
+ You can use the following for a dropline exclude (from example slapt-getrc):
+ 
+  EXCLUDE=kernel-ide,kernel-source,kernel-headers,kernel-modules,lilo,.*-dl$,devs
 
 
 16. How can I generate an exclude list for an entire disk set?
@@ -264,17 +263,7 @@ Frequenty Asked Questions:
    #!/bin/sh
    # this should gen an exclude list for a particular dir set (first arg to script)
    DIR=$1
-   F=0
-   for pkg in `./slapt-get --search "^\.\/slackware\/${DIR}$"|awk '{print $1}'`
-   do
-     if [ $F == 1 ]; then
-       echo -n ,$pkg
-     else
-       echo -n $pkg
-     fi
-     F=1
-   done
-   echo
+   slapt-get --search "^\.\/slackware\/${DIR}$"|awk '{print $1}'|xargs -iZ echo -n "Z,"|sed -e 's/,$//'
 
 17. How do I use a local file source?
 
